Fix text overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -86,6 +86,7 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	overflow: hidden;
 }
 
 #cover-brand > img {
